package utils;

public enum Error {
    ERRORLENGHT, ERRORCOLOR, NOERROR;
}
