@startuml Mastermind
class Mastermind{
  - start()
  + main(String[])
}
package models {
    class Game{
        ~ MAX_ATTEMPS : int
        ~ WINS : int
        - results : int[][]
        - proposedCombinations : ProposedCombination[]
        - SecretCombination

        + previousAttempts(int) : String[]
        + getAttempt(int) : String
        + finalResult(int) : boolean
        + getResult() : boolean
        + addNewAttempt(int)
        + isFinished(int) : boolean
    }

    class Combination{
        ~ MAX_COLORS : int
        + Code : String
        + CharCode : Char[]
        {abstract} + getCombination() : String
    }

    Class SecretCombination{
        - setRamdomCombination()
        - isContain(int, char[])
        + isEquals(String)
    }
    Class ProposedCombination{
        - getValidCombination() : String
        - isColorOK(String) : boolean
        + getProposedCombination() : ProposedCombination
    }
    Game *--> SecretCombination
    Game *--> "0..10" ProposedCombination
    Combination <|-- SecretCombination
    Combination <|-- ProposedCombination
}
package views{
    View *--> ConsoleView
    ConsoleView <|--- GameView
    ConsoleView <|--- CombinationView

    Class View{
        - Game
        - setGame()
        + isResumed()
        + play(Game)
    }
    Class GameView{
    + showTitle()
    + showAttempsNumber(int)
    + showPreviousAttempts(String[])
    + finalResult(boolean)
    }
    Class CombinationView{
    ~ PROPOSE
    ~ WRONG_LENGTH
    ~ WRONG_COLORS
    + inProposedCombination(String value,Error) : String
    + addNewAttempt(int)
    - getProposedCombination(): ProposedCombination 
    }
}
package utils {
    Class Console{
    + input()
    + out()
    }
    enum Color{
        RED     "r"
        YELLOW  "y"
        BLUE    "b"
        GREEN   "g"
        PURPLE  "p"
        ORANGE  "o"
        + valueOf(char) : Color
        + valueOf(int) : char
        + getKeyword() : int
    }
    enum Error{
        ERRORLENGTH
        ERRORCOLOR
        NOERROR
    }
}
Mastermind *--> Game
Mastermind *--> View
Game ...> GameView
View ...> Game
ConsoleView *--> Console
Combination *--> "4" Color
ProposedCombination ...> CombinationView
CombinationView ...> Error
ProposedCombination..> Error
@enduml